--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -9,7 +9,7 @@
              xmlns:tree="clr-namespace:System.Windows.Controls;assembly=TreeListView"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="700">
+             d:DesignHeight="600" d:DesignWidth="1000">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -156,11 +156,29 @@
             <DataGrid Margin="5" ItemsSource="{Binding History}" IsReadOnly="True" AutoGenerateColumns="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="日付" Binding="{Binding CurrentDate}" CanUserReorder="True" CanUserResize="True"/>
-                    <DataGridTextColumn Header="買付額(+)・売却額(-)" Binding="{Binding InvestmentValue}"/>
-                    <DataGridTextColumn Header="買付数(+)・売却数(-)" Binding="{Binding TradeQuantity}"/>
-                    <DataGridTextColumn Header="保有数" Binding="{Binding Quantity}"/>
-                    <DataGridTextColumn Header="評価額" Binding="{Binding Amount}"/>
-                    <DataGridTextColumn Header="含損益" Binding="{Binding UnrealizedProfitLoss}"/>
+                    <DataGridTextColumn Binding="{Binding InvestmentValue}" CanUserReorder="True" CanUserResize="True">
+                        <DataGridTextColumn.HeaderTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Vertical">
+                                    <TextBlock Text="取引額" HorizontalAlignment="Center"/>
+                                    <TextBlock Text="買付・入金(+) / 売却・出金(-)" FontSize="8" HorizontalAlignment="Center"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTextColumn.HeaderTemplate>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Binding="{Binding TradeQuantity}" CanUserReorder="True" CanUserResize="True">
+                        <DataGridTextColumn.HeaderTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Vertical">
+                                    <TextBlock Text="取引数量" HorizontalAlignment="Center"/>
+                                    <TextBlock Text="買付(+) / 売却(-)" FontSize="8" HorizontalAlignment="Center"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTextColumn.HeaderTemplate>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="保有数" Binding="{Binding Quantity}" CanUserReorder="True" CanUserResize="True"/>
+                    <DataGridTextColumn Header="時価評価額" Binding="{Binding Amount}" CanUserReorder="True" CanUserResize="True"/>
+                    <DataGridTextColumn Header="含損益" Binding="{Binding UnrealizedProfitLoss}" CanUserReorder="True" CanUserResize="True"/>
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
