--- a/PortFolion/PortFolion/Views/NodeNameEditWindow.xaml
+++ b/PortFolion/PortFolion/Views/NodeNameEditWindow.xaml
@@ -1,21 +1,18 @@
 ﻿<mah:MetroWindow x:Class="PortFolion.Views.NodeNameEditWindow"
-                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
-                xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
-                xmlns:v="clr-namespace:PortFolion.Views"
-                xmlns:vm="clr-namespace:PortFolion.ViewModels"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                mc:Ignorable="d" SaveWindowPosition="False"
-                GlowBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
-                Title="{Binding Title}" Height="350" Width="525">
-    
-    <!--<Window.DataContext>
-        <vm:Window1ViewModel/>
-    </Window.DataContext>-->
+                 x:Name="nameEditWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                 xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+                 xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
+                 xmlns:v="clr-namespace:PortFolion.Views"
+                 xmlns:vm="clr-namespace:PortFolion.ViewModels"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                 mc:Ignorable="d" SaveWindowPosition="False"
+                 GlowBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
+                 Title="{Binding Title}" Height="350" Width="525">
     
      <i:Interaction.Triggers>
      
@@ -33,6 +30,10 @@
             <l:DataContextDisposeAction/>
         </i:EventTrigger>
 
+        <l:InteractionMessageTrigger MessageKey="EditEndNodeName" Messenger="{Binding Messenger}">
+            <ei:ChangePropertyAction TargetName="nameEditWindow" PropertyName="DialogResult" Value="true"/>
+        </l:InteractionMessageTrigger>
+
         <!--WindowのCloseキャンセル処理に対応する場合は、WindowCloseCancelBehaviorの使用を検討してください-->
 
     </i:Interaction.Triggers>
@@ -40,6 +41,7 @@
     <Grid>
         <StackPanel Orientation="Vertical">
             <TextBlock Text="名前を設定または変更します。" FontSize="20"/>
+            <TextBlock Text="変更前:"/>
             <TextBox Text="{Binding Name}"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Content="Cancel" Command="{Binding CancelCmd}"/>
