--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -78,37 +78,55 @@
                 <MenuItem Header="開"/>
                 <MenuItem Header="閉"/>
             </Menu>
-            <tree:TreeListView x:Name="LocationTree" AllowsColumnReorder="True" ItemsSource="{Binding Root}" >
-                <!-- Style="{StaticResource VirtualisedMetroTreeView}"-->
+            <tree:TreeListView x:Name="LocationTree" AllowsColumnReorder="True"
+                               ItemsSource="{Binding Root}" >
                 <tree:TreeListView.Resources>
                     <Style TargetType="ToggleButton">
+                        <Setter Property="Focusable" Value="False" />
+                        <Setter Property="Height" Value="16" />
+                        <Setter Property="Width" Value="16" />
+                        <Setter Property="Margin" Value="1" />
                         <Setter Property="Template">
                             <Setter.Value>
-                                <ControlTemplate TargetType="ToggleButton">
-                                    <Border Width="9"
-                                        Height="9"
-                                        Background="Transparent">
-                                        <Border Width="9" Height="9" BorderThickness="1"
-                                            BorderBrush="#FF7898B5" CornerRadius="1" SnapsToDevicePixels="true">
-                                            <Border.Background>
-                                                <LinearGradientBrush StartPoint="0,0"
-                                                        EndPoint="1,1">
-                                                    <LinearGradientBrush.GradientStops>
-                                                        <GradientStop Color="White"
-                                                    Offset=".2"/>
-                                                        <GradientStop Color="#FFC0B7A6"
-                                                    Offset="1"/>
-                                                    </LinearGradientBrush.GradientStops>
-                                                </LinearGradientBrush>
-                                            </Border.Background>
-                                            <Path x:Name="ExpandPath" Margin="1,1,1,1" Fill="Black"
-                                                Data="M 0 2 L 0 3 L 2 3 L 2 5 L 3 5 L 3 3 L 5 3 L 5 2 L 3 2 L 3 0 L 2 0 L 2 2 Z"/>
-                                        </Border>
-                                    </Border>
+                                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                                    <Grid 
+                                      Margin="{TemplateBinding Margin}"
+                                      Background="Transparent">
+                                        <Path x:Name="ExpandPath"
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            Fill="Transparent"
+                                            Stroke="{DynamicResource BlackBrush}"
+                                            Data="{StaticResource TreeArrow}">
+                                            <Path.RenderTransform>
+                                                <RotateTransform Angle="135" CenterX="3" CenterY="3" />
+                                            </Path.RenderTransform>
+                                        </Path>
+                                    </Grid>
                                     <ControlTemplate.Triggers>
                                         <Trigger Property="IsChecked" Value="True">
-                                            <Setter Property="Data" TargetName="ExpandPath"
-                                            Value="M 0 2 L 0 3 L 5 3 L 5 2 Z"/>
+                                            <Setter TargetName="ExpandPath" Property="Fill" Value="{DynamicResource GrayBrush1}" />
+                                            <Setter TargetName="ExpandPath" Property="RenderTransform">
+                                                <Setter.Value>
+                                                    <RotateTransform Angle="180" CenterX="3" CenterY="3" />
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Setter TargetName="ExpandPath" Property="Stroke" Value="{DynamicResource BlackBrush}" />
+                                        </Trigger>
+                                        <Trigger Property="IsEnabled" Value="False">
+                                            <Setter TargetName="ExpandPath" Property="Stroke" Value="{DynamicResource GrayBrush5}" />
+                                        </Trigger>
+                                        <MultiTrigger>
+                                            <MultiTrigger.Conditions>
+                                                <Condition Property="IsEnabled" Value="False" />
+                                                <Condition Property="IsChecked" Value="True" />
+                                            </MultiTrigger.Conditions>
+                                            <Setter TargetName="ExpandPath" Property="Fill" Value="{DynamicResource GrayBrush5}" />
+                                            <Setter TargetName="ExpandPath" Property="Stroke" Value="{DynamicResource GrayBrush5}" />
+                                        </MultiTrigger>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter TargetName="ExpandPath" Property="Fill" Value="{DynamicResource AccentColorBrush}" />
+                                            <Setter TargetName="ExpandPath" Property="Stroke" Value="{DynamicResource AccentColorBrush}" />
                                         </Trigger>
                                     </ControlTemplate.Triggers>
                                 </ControlTemplate>
@@ -123,9 +141,9 @@
                     <GridViewColumn Header="項目" Width="auto">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
+                                <StackPanel Orientation="Horizontal" >
                                     <tree:TreeListViewExpander/>
-                                    <TextBlock Text="{Binding Name}"/>
+                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
                                     <ddmb:DropDownMenuButton Style="{StaticResource MetroFlatToggleButton}">
                                         <!--<StackPanel Orientation="Horizontal ">-->
                                         <TextBlock Text="編"/>
