--- a/PortFolion/PortFolion/Views/NodeNameEditWindow.xaml
+++ b/PortFolion/PortFolion/Views/NodeNameEditWindow.xaml
@@ -21,9 +21,9 @@
     	<!--Livet1.1からはコードビハインドでViewModelのイベントを受信するためのWeakEventLisnterサポートが追加されています --> 
         
         <!--WindowのContentRenderedイベントのタイミングでViewModelのInitializeメソッドが呼ばれます-->
-        <i:EventTrigger EventName="ContentRendered">
+        <!--<i:EventTrigger EventName="ContentRendered">
             <l:LivetCallMethodAction MethodTarget="{Binding}" MethodName="Initialize"/>
-        </i:EventTrigger>
+        </i:EventTrigger>-->
 
         <!--Windowが閉じたタイミングでViewModelのDisposeメソッドが呼ばれます-->
         <i:EventTrigger EventName="Closed">
@@ -39,10 +39,10 @@
     </i:Interaction.Triggers>
     
     <Grid>
-        <StackPanel Orientation="Vertical">
+        <StackPanel Orientation="Vertical" FocusManager.FocusedElement="{Binding ElementName=editText}">
             <TextBlock Text="名前を設定または変更します。" FontSize="20"/>
             <TextBlock Text="変更前:"/>
-            <TextBox Text="{Binding Name}"/>
+            <TextBox x:Name="editText" Text="{Binding Name}"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Content="Cancel" Command="{Binding CancelCmd}"/>
                 <Button Content="OK" Command="{Binding ExecuteCmd}"/>
